# python-project-50

./: README.md  pyproject.toml  setup.cfg
.github/: pyci.yml
genDiff/: args_parser.py  index.py
genDiff/scripts/: genDiff_script.py
