[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Nikolay Larionov <ostinpower.1101@gmail.com>"]
readme = "README.md"
packages = [{include = "genDiff"}]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.scripts]
genDiff = "genDiff.scripts.genDiff_script:main"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
